testing/tests/ui/transclude-missing.stderr
error: the previous template error derives from
 --> tests/ui/transclude-missing.rs:4:12
  |
4 | #[template(path = "transclude-there.html")]
  |            ^^^^

error: the previous template error derives from
 --> tests/ui/transclude-missing.rs:8:12
  |
8 | #[template(source = r#"{% include "transclude-there.html" %}"#, ext = "html")]
  |            ^^^^^^
